# anchored-app

./: .gitignore  .prettierignore  ACTIVE_SPEC.md  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  OVERVIEW.md  PLANS.md  PROJECT.md  README.md  SCOPE-old.md  SCOPE.md  anchor-stuff.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: ALPHA_STABILITY_LOG.md  DEV_FIXTURE.md  FEATURES.md  MANUAL_QA_CHECKLIST.md  MARKDOWN_SPEC.md  PUBLIC_TEST_CHECKLIST.md  TEST_CHECKLIST.md  database-schema-gpt-ref.md  known-limitations.md  schema-output.md  sync-gpt-advice.md
docs/ai/: data.md  deployment.md  frontend.md
docs/build-specs/: shell-ui-spec-v1.md
docs/builds/: backup-restore-v0.md  cluade-code-sync-spec-v1.md  document-templates-v0-spec.md  document-templates-v1-spec.md  document-type-frontmatter-registry-spec-v0.md  documents-repo-spec-v0.md  editor-spec-v0.md  editor-spec-v1-1.md  editor-spec-v1.md  habits-spec-v1.md  hybrid-sync-conflict-spec-v1.md  inbox-processing-v0.md  local-search-spec-v1.5.md  local-search-v0.md  now-view-spec-v1.md  quick-capture-v1.md  rename-core-primitive-spec.md  shell-overlay-layer-spec.md  shell-ui-spec-v1.md  (+6 more)
fixtures/: SMOKE_TEST.md  TEST_VAULT.md
scripts/: build-macos-alpha.mjs  start-dev-server.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: continuity.rs  lib.rs  links.rs  main.rs  metadata.rs  vault.rs  watcher.rs
(+303 files in other folders)
